# mcp-tutorial

./: .env.example  .gitignore  README.md  README_zh-CN.md  config.py  main.py  pyproject.toml
client/: __init__.py  llm.py  runtime.py
docs/: mcp_call_sequence.mmd  mcp_complete_call_flow.md  mcp_complete_call_flow_zh-CN.md  process_flow_zh-CN.mmd
server/: __init__.py  app.py  runtime.py  sse.py  stdio.py  streamable_http.py
